--- a/admin.html
+++ b/admin.html
@@ -74,16 +74,56 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="w3-card-4">
-                    <a href="#">
+                    <a href="#" data-toggle="modal" data-target="#myModal">
                         <div align="center">
                             <i class="fa fa-plus-circle fa-5x" aria-hidden="true" style="margin-top: 80px;"></i>
                         </div>
                     </a>
                 </div>
             </div>
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel">Add Event</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="Event_title">Title</label>
+                                    <input type="text" class="form-control" id="Event_title" placeholder="Title">
+                                </div>
+                                <div class="form-group">
+                                    <label for="Event_Date">Date</label>
+                                    <input type="date" class="form-control" id="Event_Date" placeholder="Date">
+                                </div>
+                                <div class="form-group">
+                                    <label for="Event_time">Time</label>
+                                    <input type="time" class="form-control" id="Event_time" placeholder="Time">
+                                </div>
+                                <div class="form-group">
+                                    <label for="Event_location">Location</label>
+                                    <input type="text" class="form-control" id="Event_location" placeholder="Location">
+                                </div>
+                                <div class="form-group">
+                                    <label for="Event_desc">Desc</label>
+                                    <textarea class="form-control" id="Event_desc" rows="3"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <label for="Event_image">Event image url</label>
+                                    <input type="text" class="form-control" id="Event_image" placeholder="url">
+                                </div>
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-3">
                 <div class="w3-card-8">
-                    <a href="#">
+                    <a href="">
                         <div  class="wrapper">
                             <img src="img/header3.jpg"  height="250px;" width="100%">
                             <div class="overlay">
