--- a/admin.html
+++ b/admin.html
@@ -67,7 +67,7 @@
 <div class="container-fluid">
     <div class="panel panel-default">
         <div class="panel-body">
-           <h3 align="center"><b>Events Page</b></h3>
+           <h3 align="center"><b>Events List</b></h3>
         </div>
     </div>
     <div class="container">
@@ -123,7 +123,7 @@
             </div>
             <div class="col-md-3">
                 <div class="w3-card-8">
-                    <a href="">
+                    <a href="#events">
                         <div  class="wrapper">
                             <img src="img/header3.jpg"  height="250px;" width="100%">
                             <div class="overlay">
@@ -140,36 +140,78 @@
             </div>
             <div class="col-md-3">
                 <div class="w3-card-8">
-                    <div  class="wrapper">
-                        <img src="img/header3.jpg"  height="250px;" width="100%">
-                        <div class="overlay">
-                            <div style="padding-top: 150px;">
-                                <div style=" background: rgba(0, 0, 0, 0.6);  margin: 1%; border: none">
-                                    <h4 align="center" >Event Title</h4>
-                                    <p><b>Date:</b> 18/6/2016<br><b>Time:</b> 10 am<br><b>Venue:</b> 91 Springboard</p>
+                    <a href="#events">
+                        <div  class="wrapper">
+                            <img src="img/header3.jpg"  height="250px;" width="100%">
+                            <div class="overlay">
+                                <div style="padding-top: 150px;">
+                                    <div style=" background: rgba(0, 0, 0, 0.6);  margin: 1%; border: none">
+                                        <h4 align="center">Event Title</h4>
+                                        <p><b>Date:</b> 18/6/2016<br><b>Time:</b> 10 am<br><b>Venue:</b> 91 Springboard</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="w3-card-8">
-                    <div  class="wrapper">
-                        <img src="img/header3.jpg"  height="250px;" width="100%">
-                        <div class="overlay">
-                            <div style="padding-top: 150px;">
-                                <div style=" background: rgba(0, 0, 0, 0.6);  margin: 1%; border: none">
-                                    <h4 align="center" >Event Title</h4>
-                                    <p><b>Date:</b> 18/6/2016<br><b>Time:</b> 10 am<br><b>Venue:</b> 91 Springboard</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+    <section id="events">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h3 align="center"><b>Events Details</b></h3>
+            </div>
+        </div>
+        <div>
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Event Detail</a></li>
+                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Announcement</a></li>
+                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Participant</a></li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="home">
+                    <div class="container-fluid" style="margin-top: 10px;">
+                        <div class="well">
+                            <h4 align="center">Event Title</h4>
+                            <p>Event Description<p></p>
+                        </div>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="profile">
+                    <div class="container-fluid" style="margin-top: 10px;">
+                        <div class="well">
+                            <h4 align="center">Add Announcement</h4>
+                            <form>
+                                <div class="form-group">
+                                    <label for="Event_annoc">Announcement</label>
+                                    <textarea class="form-control" id="Event_annoc" rows="3"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="messages">
+                    <div class="container-fluid" style="margin-top: 10px;">
+                        <div class="well">
+                            <h4 align="center">Add Participant</h4>
+                            <form>
+                                <div class="form-group">
+                                    <label for="Event_participant">Participant Email Id</label>
+                                    <input type="email" class="form-control" id="Event_participant" placeholder="Participant email id">
+                                </div>
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </div>
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
